// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatAllDatesToUtc [impl] > should recursively replace all dates by formatted strings, given structure with dates & nestings 1`] = `
{
  "bar": "bar",
  "date": "1998-02-01T01:00:00+01:00",
  "date2": "1998-01-02T01:00:00+01:00",
  "foo": "foo",
  "nested": {
    "date": "1998-02-01T01:00:00+01:00",
    "deeplyNested": {
      "12": 12,
      "date": "1998-02-01T01:00:00+01:00",
      "foo": "foo",
    },
    "foo": "foo",
  },
}
`;

exports[`formatAllDatesToUtc [impl] > should replace all dates by formatted strings, given flat structure with dates 1`] = `
{
  "bar": "bar",
  "date": "1998-02-01T01:00:00+01:00",
  "date2": "1998-01-02T01:00:00+01:00",
  "foo": "foo",
}
`;
